# md_reader

./: Cargo.toml  LICENSE  README.md  dev_plan.md  test.md  ui_improvements.md
src/: app.rs  main.rs  pdf_export.rs  persist.rs
src/fs/: mod.rs  tree.rs
src/markdown/: editor_highlight.rs  highlight.rs  mod.rs  parser.rs  renderer.rs
src/theme/: mod.rs
src/ui/: mod.rs  outline.rs  sidebar.rs
