[package]
name = "md_reader"
version = "0.3.0"
edition = "2024"
authors = ["Juba H."]
description = "A fast, native markdown reader and editor with live preview, syntax highlighting, and multi-file support."
license = "MIT"
repository = "https://github.com/bauj/md_reader"
homepage = "https://github.com/bauj/md_reader"
readme = "README.md"
keywords = ["markdown", "editor", "preview", "gui", "reader"]
categories = ["text-editors", "visualization"]
exclude = [".claude/"]

[dependencies]
eframe = "0.31"
egui = "0.31"
rfd = "0.15"
pulldown-cmark = "0.12"
open = "5"
egui_extras = "0.31"
syntect = "5"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
image = "0.24"
printpdf = "0.7"
ttf-parser = "0.25"
lopdf = { version = "0.31", default-features = false }
